# efdl-week7-private

./: .gitignore  Dockerfile  README.md  REPORT.md  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
proto/: inference.proto
scripts/ci/: docker_grpc_smoke_test.sh  docker_metrics_smoke_test.sh  docker_smoke_test.sh
src/: inference_pb2.py  inference_pb2_grpc.py  service.py
tests/: conftest.py  test_grpc.py  test_integration.py
